--- a/front/src/index.html
+++ b/front/src/index.html
@@ -16,7 +16,7 @@
       rel="stylesheet"
     />
   </head>
-  <body class="mat-typography">
+  <body class="mat-typography bg-gray-50">
     <app-root></app-root>
   </body>
 </html>
